tests/contract_testcases/polkadot/functions/global_functions_02.sol

        function x() virtual {}
        
// ---- Expect: diagnostics ----
// error: 2:22-29: only functions in contracts can be virtual
